# qa_guru_3_20_hw

./: .gitignore  README.md  config.py  pyproject.toml  settings.toml
tests/: conftest.py  test_wiki.py
wikipedia/utils/: attachments.py
